SOme corrections and added glossary

--- a/thesis_skel/thesis_2009_skel.tex
+++ b/thesis_skel/thesis_2009_skel.tex
@@ -21,7 +21,7 @@
 % \usepackage{ubonn-biblatex}
 
 % Glossary package
-% \usepackage[acronym,toc,nosuper]{glossaries}
+\usepackage[acronym,toc,nosuper,nonumberlist]{glossaries}
 % TikZ packages and libraries
 % \usepackage{tikz}
 % \usepackage{tikz-3dplot}
@@ -96,6 +96,9 @@
 % Command to horizontal cenetr the table contents
 \newcolumntype{P}[1]{>{\centering\arraybackslash}m{#1}}
 \captionsetup[figure]{labelfont=bf,format=hang}
+% Command for Offline symbol 
+\newcommand{\Offline}{\mbox{$\overline{\textrm{Off}}$\hspace{.05em}%
+    \raisebox{.4ex}{$\underline{\textrm{line}}$}}}
 %------------------------------------------------------------------------------
 % The abstract is only needed for the printed version and should be in
 % English regardless of the language of the thesis
@@ -130,9 +133,10 @@
 %------------------------------------------------------------------------------
 % Make a glossary and a list of acronyms
 % \makeglossaries
+\makenoidxglossaries
 
 % Glossary entries
-% \input{thesis_glossary}
+\input{thesis_glossary}
 
 % Draft version - add DRAFT to header.
 % You can use draftwatermark to add DRAFT to the cover page.
@@ -260,7 +264,10 @@
 
 %------------------------------------------------------------------------------
 % Print the glossary and list of acronyms
-% \printglossaries
+% \printglossaries 
+\setglossarystyle{list}
+% \setglossarystyle{listhypergroup} % For pdfs maybe
+\printnoidxglossaries
 
 %------------------------------------------------------------------------------
 % You could instead add your acknowledgements here - don't forget to
