--- a/thesis_skel/thesis_DGH.tex
+++ b/thesis_skel/thesis_DGH.tex
@@ -25,7 +25,7 @@ In this analysis, a different approach based on the 6T5 condition, which is requ
 
 \begin{equation}
   \label{eq:nu_accep}
-  A_{hex}(E_{\nu}, X)  = \int^{\phi = 2\pi}_{\phi = 0} \,d\phi \int_{\theta_{min} = 58.5^{\circ}}^{\theta_{max}= 76.5^{\circ}}  \, A_{6T5} \cdot \varepsilon(E_{\nu}, X, \theta) \cdot sin\theta \, cos\theta \cdot d\theta    \mathrm{[cm^2 sr]}
+  A_{hex}(E_{\nu}, X)  = \int^{\phi = 2\pi}_{\phi = 0} \,d\phi \int_{\theta_{min} = 58.5^{\circ}}^{\theta_{max}= 76.5^{\circ}}  \, A_{6T5} \cdot \varepsilon(E_{\nu}, X, \theta) \cdot \sin \theta \, \cos \theta \cdot d\theta    \mathrm{[cm^2 sr]}
 \end{equation}
 
 ,where $\varepsilon(E_{\nu}, X, \theta)$ is the neutrino detection efficiency for each simulated energy, slant depth and zenith discussed in the last chapter. An example for a particular combination is given in fig.~\ref{Eff_X_comp} in the last chapter. Plots for efficiency for each combination can be found as part of the git repository made available for this analysis.
@@ -45,7 +45,7 @@ Fig.~\ref{fig:EffMass_flavors_comp} shows the effective mass for both CC and NC 
   \caption{Effective mass for one 6T5 hexagon of the SD array for different neutrino flavors and interaction channels. The dashed lines are the calculated effective mass for this analysis and the solid lines is the effective mass calculated for the analysis performed without including new triggers.}
   \label{fig:EffMass_flavors_comp}
 \end{figure}
-Exposure calculation still needs to account for the detector configuration and its evolution over time. We reduced our array to units of 6T5 hexagons and a full SD array consisting of 1660 stations consists 1420 of these hexagons. Since the establishment of the Pierre Auger Observatory the active number of 6T5 hexagons are monitored every second. This forms a very good indicator for the time evolution of the SD array since any non-working station or large periods of instability are intrinsically recorded in the number of active 6T5 hexagons at that time. The instantaneous number of hexagons, $n_{\text{hex}}(t)$ thus can be used as an indicator of detector configurations over time. The $n_{\text{hex}}(t)$ were updated and calculated every minute and have an uncertainty of about 1.5\% as mentioned in~\cite{PierreAuger:2010zof}. To calculate the energy dependent exposure, the effective mass of one 6T5 hexagon is multiplied by the instantaneous number of hexagons and integrated in time. Further, the $\nu$ interaction probability for each flavour(i = $\nu_e, \nu_{\mu}, \nu_{\tau}$) and channel(c = CC, NC) is also folded in. The exposure is given as:
+Exposure calculation still needs to account for the detector configuration and its evolution over time. We reduced our array to units of 6T5 hexagons and a full SD array consisting of 1660 stations consists 1420 of these hexagons. Since the establishment of the Pierre Auger Observatory the active number of 6T5 hexagons are monitored every second. This forms a very good indicator for the time evolution of the SD array since any non-working station or large periods of instability are intrinsically recorded in the number of active 6T5 hexagons at that time. The instantaneous number of hexagons, $n_{\text{hex}}(t)$ thus can be used as an indicator of detector configurations over time. The $n_{\text{hex}}(t)$ were updated and calculated every minute and have an uncertainty of about 1.5\% as mentioned in~\cite{PierreAuger:2010zof}. To calculate the energy dependent exposure, the effective mass of one 6T5 hexagon is multiplied by the instantaneous number of hexagons and integrated in time. Further, the $\nu$ interaction probability for each flavour (i = $\nu_e, \nu_{\mu}, \nu_{\tau}$) and channel (c = CC, NC) is also folded in. The exposure is given as:
 
 \begin{equation}
   \xi^{i,c}(E_{\nu}) = \frac{\sigma^{i,c}(E_{\nu})}{m_N} \int_{t} M_{\text{hex}}^{i,c}(E_{\nu}) \cdot n_{\text{hex}}(t) \cdot dt =  \frac{\sigma^{i,c}(E_{\nu})}{m_N} \cdot M_{\text{hex}}^{i,c}(E_{\nu}) \cdot N_{\text{hex}}
@@ -70,7 +70,7 @@ An effective or total exposure, $\xi_{tot}(E_{\nu}) = \sum_{i}\sum_{c} \xi^{i,c}
 \end{figure}
 \todo{Replace with one with no title}
 
-As seen in the figure the $\nu_e$ CC channels contributes the most to the total neutrino exposure($\sim$85\%). The exposure rises rapidly at lower energies and then mostly flattens with just a slight increase which is due to the energy dependent neutrino cross-section. The shape is due to the neutrino detection efficiency which is small for lower energies as shown in fig~\ref{fig:Eff_v_theta_CC_E} in the last chapter. The next dominant channels are the $\nu_{\tau}$ and $\nu_{\mu}$ CC which are assumed to have a similar detection efficiency as the NC channel but have a higher value of cross-section. The NC channel contribution is very small($\sim$5\%) due to the reasons discussed in section~\ref{subsec:nu_sel_nudeteff}.  
+As seen in the figure the $\nu_e$ CC channels contributes the most to the total neutrino exposure ($\sim$85\%). The exposure rises rapidly at lower energies and then mostly flattens with just a slight increase which is due to the energy dependent neutrino cross-section. The shape is due to the neutrino detection efficiency which is small for lower energies as shown in fig~\ref{fig:Eff_v_theta_CC_E} in the last chapter. The next dominant channels are the $\nu_{\tau}$ and $\nu_{\mu}$ CC which are assumed to have a similar detection efficiency as the NC channel but have a higher value of cross-section. The NC channel contribution is very small ($\sim$5\%) due to the reasons discussed in section~\ref{subsec:nu_sel_nudeteff}.  
 
 The exposure calculated this analysis is also compared to the one calculated using the previous analysis for the same time period in fig~\ref{fig:Exp_flavors_comp}. For the CC channel a $\sim 5 \times$ improvement is seen at lower energies and a $\sim$2x improvement at higher energies. For NC this improvement is not that significant. There is a 2x improvement at lower energies and a 1.5$\times$ improvement at higher energies. The improvement at lower energies is due to the inclusion of the new triggers MoPS and ToTd which enhance the detection efficiency at lower energies. The improvement at higher energies is mainly due to the improved Fisher analysis. Since the $\nu_e$ CC contribution to the total exposure is significantly higher than other channels, the overall improvement to the total exposure is only slightly less than the improvement to the $\nu_e$ CC channel. 
 
