--- a/thesis_skel/thesis_EAS.tex
+++ b/thesis_skel/thesis_EAS.tex
@@ -5,12 +5,12 @@
 \label{chap:EAS}
 %==============================================================================
 
-As mentioned in the previous chapter an Extensive Air Shower (EAS) is a cascade of high-energy particles that is produced when an UHECR, typically a proton or a nucleus, collides with a nucleus in Earth's atmosphere. This cascade can span over hundred to thousands of meters based on the energy of the initial particle and the incoming zenith angle. EASs offer the best way to look for UHECRs since the low flux of these particles make direct detection using detectors mounted on balloons or spacecrafts not feasible. The EAS can be detected at the ground via an array of detectors. To infer the properties of the CR from the EAS it creates, one needs to model and understand how an air shower develops in the atmosphere. This chapter describes the process of the initiation and the development of the shower induced by CRs and neutrinos. It also aims to describe the important characteristics of EASs which help in extracting the relevant information and the last part of this chapter is devoted to summarise the detection of the EASs using different detector systems. 
+As mentioned in the previous chapter an \gls{EAS} is a cascade of high-energy particles that is produced when an \gls{UHECR}, typically a proton or a nucleus, collides with a nucleus in Earth's atmosphere. This cascade can span over hundred to thousands of meters based on the energy of the initial particle and the incoming zenith angle. EASs offer the best way to look for UHECRs since the low flux of these particles make direct detection using detectors mounted on balloons or spacecrafts not feasible. The EAS can be detected at the ground via an array of detectors. To infer the properties of the \gls{CR} from the EAS it creates, one needs to model and understand how an air shower develops in the atmosphere. This chapter describes the process of the initiation and the development of the shower induced by CRs and neutrinos. It also aims to describe the important characteristics of EASs which help in extracting the relevant information and the last part of this chapter is devoted to summarise the detection of the EASs using different detector systems. 
 
 \begin{figure}[t!]
     \centering
     \includegraphics[width=14.5cm]{thesis_figures/EAS/EAS_reactions.pdf}
-    \caption{Development of Extensive Air Shower. The figure shows the different components of an EAS and the reactions which lead to their formation.}
+    \caption{Development of an Extensive Air Shower. The figure shows the different components of an EAS and the reactions which lead to their formation.}
     \label{fig:EAS_components}
 \end{figure}
 
@@ -115,7 +115,7 @@ Apart from the shower maximum and the number of muons at ground other observable
 \end{figure}
 
 $X_0$ and $\lambda$ can be estimated by fitting the profile based on the above function and depend on the composition and energy of the primary. $N_{\text{max}}$ is the number of particles observed at $X_{\text{max}}$. The integral of the longitudinal development profile gives an estimate of the total calorimetric energy deposited by the shower. 
-The point where the shower axis vector intersects the ground is called the \textit{shower core}. The shower axis is thus defined by the zenith angle $\theta$, azimuth angle $\phi$ and the shower core position. If one looks at the shower head on, the large thin disc like appearance consisting of highly energetic particles is called the \textit{shower front}. The shape is due to the path length differences between the shower particles travelling away from the shower axis to the one travelling in the direction of the shower axis. The disc is thus thinner near the shower core and widens away from it. As the shower front intersects the ground, the density and the timing of the particles detected at the detector form what is called the \textit{shower footprint}. It is the primary observable used by a ground level EAS detector to measure and characterise the shower. The arrival time of the particles in the footprint can help determine the shower geometry whereas the density can be used to reconstruct the energy of the primary. The density is estimated as a function of the radial distance from the shower core on the ground, by the \textit{lateral distribution function} (LDF). The modern LDF function is an extension on the parameterisation given by Greisen~\cite{annurev:/content/journals/10.1146/annurev.ns.10.120160.000431} and by Kamata and Nishimura~\cite{10.1143/PTPS.6.93} and is described as:
+The point where the shower axis vector intersects the ground is called the \textit{shower core}. The shower axis is thus defined by the zenith angle $\theta$, azimuth angle $\phi$ and the shower core position. If one looks at the shower head on, the large thin disc like appearance consisting of highly energetic particles is called the \textit{shower front}. The shape is due to the path length differences between the shower particles travelling away from the shower axis to the one travelling in the direction of the shower axis. The disc is thus thinner near the shower core and widens away from it. As the shower front intersects the ground, the density and the timing of the particles detected at the detector form what is called the \textit{shower footprint}. It is the primary observable used by a ground level EAS detector to measure and characterise the shower. The arrival time of the particles in the footprint can help determine the shower geometry whereas the density can be used to reconstruct the energy of the primary. The density is estimated as a function of the radial distance from the shower core on the ground, by the \gls{LDF}. The modern LDF function is an extension on the parameterisation given by Greisen~\cite{annurev:/content/journals/10.1146/annurev.ns.10.120160.000431} and by Kamata and Nishimura~\cite{10.1143/PTPS.6.93} and is described as:
 \begin{equation}
     \label{eq:Lateral_dist_func}
     \rho_e(r) = \frac{N_e}{2 \pi R_M^2} C(s) \biggl(\frac{r}{R_M}\biggr)^{(s-2)}\biggl(\frac{r}{R_M}+1\biggr)^{(s-4.5)}
@@ -135,13 +135,13 @@ At high energies, due to the low flux, EAS offer the best way to detect CRs. Gro
 
 \subsection{Fluorescence Detection}
 \label{sec:EAS_flu}
-Atmospheric fluorescence, observable in air showers above \(10^{17}\) eV, involves the emission of faint optical and ultraviolet (UV) light when high-energy particles from extensive air showers interact with nitrogen molecules in Earth's atmosphere. These interactions excite the nitrogen molecules, which emit UV light during de-excitation, primarily in the near-ultraviolet range. The number of photons emitted is directly proportional to the energy deposited by the shower particles, allowing researchers to estimate the primary particle's energy. At altitudes between 5 km and 10 km, the photon yield varies with height, typically producing 4-5 photons per meter per charged particle, and these photons can be detected from distances up to 35 km.
+Atmospheric fluorescence, observable in air showers above \(10^{17}\) eV, involves the emission of faint optical and \gls{UV} light when high-energy particles from extensive air showers interact with nitrogen molecules in Earth's atmosphere. These interactions excite the nitrogen molecules, which emit UV light during de-excitation, primarily in the near-ultraviolet range. The number of photons emitted is directly proportional to the energy deposited by the shower particles, allowing researchers to estimate the primary particle's energy. At altitudes between 5 km and 10 km, the photon yield varies with height, typically producing 4-5 photons per meter per charged particle, and these photons can be detected from distances up to 35 km.
 
-Fluorescence telescopes measure this light intensity, enabling reconstruction of the shower's longitudinal profile and energy. However, their operational duty cycle is limited as they require clear, moonless nights. Accurate reconstruction also depends on constant atmospheric monitoring to adjust for variations in light yield. Early experiments, such as those at Volcano Ranch~\cite{1977PhRvL..39..847B} and the Fly's Eye experiment~\cite{BALTRUSAITIS1985410,BALTRUSAITIS198887}, pioneered this detection technique. Today, it remains a crucial method used by observatories like the Pierre Auger Observatory and the Telescope Array (TA).
+Fluorescence telescopes measure this light intensity, enabling reconstruction of the shower's longitudinal profile and energy. However, their operational duty cycle is limited as they require clear, moonless nights. Accurate reconstruction also depends on constant atmospheric monitoring to adjust for variations in light yield. Early experiments, such as those at Volcano Ranch~\cite{1977PhRvL..39..847B} and the Fly's Eye experiment~\cite{BALTRUSAITIS1985410,BALTRUSAITIS198887}, pioneered this detection technique. Today, it remains a crucial method used by observatories like the Pierre Auger Observatory and \gls{TA}.
 
 \subsection{Cherenkov Detection}
 \label{sec:EAS_cher}
-Charged particles moving through the atmosphere can also produce Cherenkov light~\cite{Cherenkov:1934ilx}. The EAS can be either detected via Imaging Cherenkov telescopes (IACTs) which can detect showers between 20 GeV -100 TeV or non-imaging Cherenkov detectors can be set up akin to a ground based particle detector array. Both techniques are used for both gamma-ray astronomy and CR studies. Since the Cherenkov cone is collimated around the shower axis the detectors need to be installed with small spacing between them. For e.g. a particle at 10 km height produces a Cherenkov cone with a radius of 120 m. This property and the similar operational limitations akin to the fluorescence detection for the IACTs makes this technique impractical to detect UHECRs. The currently operational experiments using the non-imaging Cherenkov technique for EAS detection include Yakutsk~\cite{DYAKONOV1986224} and Tunka~\cite{KUZMICHEV2020161830} etc. IACTs are very popular for gamma-ray astronomy and multimessenger detections with H.E.S.S.~\cite{Puhlhofer:2024fjx}, MAGIC~\cite{cortina2009technicalperformancemagictelescopes} and CTA~\cite{2018_CTAO} currently operational. 
+Charged particles moving through the atmosphere can also produce Cherenkov light~\cite{Cherenkov:1934ilx}. The EAS can be either detected via \glspl{IACT} which can detect showers between 20 GeV -100 TeV or non-imaging Cherenkov detectors can be set up akin to a ground based particle detector array. Both techniques are used for both gamma-ray astronomy and CR studies. Since the Cherenkov cone is collimated around the shower axis the detectors need to be installed with small spacing between them. For e.g. a particle at 10 km height produces a Cherenkov cone with a radius of 120 m. This property and the similar operational limitations akin to the fluorescence detection for the IACTs makes this technique impractical to detect UHECRs. The currently operational experiments using the non-imaging Cherenkov technique for EAS detection include Yakutsk~\cite{DYAKONOV1986224} and Tunka~\cite{KUZMICHEV2020161830} etc. IACTs are very popular for gamma-ray astronomy and multimessenger detections with H.E.S.S.~\cite{Puhlhofer:2024fjx}, MAGIC~\cite{cortina2009technicalperformancemagictelescopes} and CTA~\cite{2018_CTAO} currently operational. 
 
 \begin{figure}[t!]
     \centering
@@ -152,7 +152,7 @@ Charged particles moving through the atmosphere can also produce Cherenkov light
 
 \subsection{Radio Detection}
 \label{sec:EAS_rad}
-When an extensive air shower (EAS) travels through the atmosphere, it generates radio emissions primarily due to two mechanisms: the geomagnetic effect and the Askaryan effect. In air showers, the geomagnetic emission dominates, contributing around 85-90\% of the total signal, while the Askaryan effect accounts for the remaining 10-15\%~\cite{1966RSPSA.289..206K, Askaryan:1961pfb, osti_4100652}. The geomagnetic effect occurs when electrons and positrons in the shower are deflected by Earth's magnetic field, creating a dynamic current that moves at nearly the speed of light. This process generates a forward-focused radio signal with a lateral distribution described by the NKG relation.
+When an \gls*{EAS} travels through the atmosphere, it generates radio emissions primarily due to two mechanisms: the geomagnetic effect and the Askaryan effect. In air showers, the geomagnetic emission dominates, contributing around 85-90\% of the total signal, while the Askaryan effect accounts for the remaining 10-15\%~\cite{1966RSPSA.289..206K, Askaryan:1961pfb, osti_4100652}. The geomagnetic effect occurs when electrons and positrons in the shower are deflected by Earth's magnetic field, creating a dynamic current that moves at nearly the speed of light. This process generates a forward-focused radio signal with a lateral distribution described by the NKG relation.
 
 The strength and characteristics of the radio signal depend on the geomagnetic field's orientation and atmospheric conditions at the detector site. At distances around 100 meters from the shower core, the detected frequencies are in the MHz range~\cite{Huege_2016}, while near the core, they extend into the GHz range. For primary energies above \(10^{17}\) eV, the emissions from both mechanisms overlap, with the measured electric field scaling directly with the shower's primary energy. This radio detection approach offers a valuable alternative to fluorescence and Cherenkov methods, free from the operational limitations of a restricted duty cycle.
 
@@ -163,7 +163,7 @@ Several radio antenna arrays are currently used for EAS detection, including LOF
 \label{sec:EAS_particle}
 This is one of the oldest detection techniques used to measure and study CRs. It consists of setting up a set of particle detectors (stations) spaced by large distances, depending on the desired energy range sensitivity of the experiment which is also dependent on the altitude of the experiment. The detectors are usually arranged in a regular pattern, and they are able to detect the secondary particles of EAS at ground by searching for time coincidences between neighbouring stations. By measuring the signal and time delay between the triggered stations the incoming direction of the primary can be estimated to $0.5^{\circ}-1^{\circ}$ of zenith angle resolution. The core position can also be determined by using the lateral distribution function (eq.~\ref{eq:Lateral_dist_func}) to fit the recorded signal at the surface detector array. The energy can also be estimated through the measurement of number of muons at ground or cross calibration with other detector systems. Different types of detection methods have been used to combine and act as particle detector arrays. These include Geiger counters at Harwell~\cite{1953Natur.171..349G}, hodoscopes at Kiel~\cite{1965ICRC....2..738B}, scintillators at Volcano ranch~\cite{Linsley1961485} and water or ice based Cherenkov detectors. Currently, scintillator based surface detector arrays and water or ice based Cherenkov tanks are the popularly used EAS detection techniques. 
 
-Water/ice based Cherenkov tanks/detectors can also detect the secondary particles of EAS at ground. These are sensitive to the Cherenkov light which is produced by the charged particles while travelling through the medium of the detector. The subsequent light is measured using a photomultiplier tube (PMT). This light signature is different depending on the type of the particle and thus can effectively help in differentiating between muons and electrons. The Pierre Auger Observatory uses an array of water Cherenkov tanks in conjunction with five fluorescence detectors for EAS measurements. IceCube also contains an array of ice based Cherenkov detectors which are used for cosmic ray studies and as a veto for their underground neutrino detectors. More details about the Pierre Auger Observatory are presented in the next chapter~\ref{chap:setup}
+Water/ice based Cherenkov tanks/detectors can also detect the secondary particles of EAS at ground. These are sensitive to the Cherenkov light which is produced by the charged particles while travelling through the medium of the detector. The subsequent light is measured using a \gls{PMT}. This light signature is different depending on the type of the particle and thus can effectively help in differentiating between muons and electrons. The Pierre Auger Observatory uses an array of water Cherenkov tanks in conjunction with five fluorescence detectors for EAS measurements. IceCube also contains an array of ice based Cherenkov detectors which are used for cosmic ray studies and as a veto for their underground neutrino detectors. More details about the Pierre Auger Observatory are presented in the next chapter~\ref{chap:setup}
 
 Scintillator based particle detector arrays can be used to distinguish between the different secondary particles of an EAS. These consist of scintillating material which produces detectable photons if a charged particle traverses through the material. If deployed at the surface, such detectors can act as discriminators for electron and muons whereas if deployed underground they can only detect muons. The size of the scintillating material controls the zenith angle sensitivity which typically decreases as the inclination of the shower increases. TA uses a vast array of scintillator based detectors along with three fluorescence detectors to measure EAS. The Pierre Auger Observatory is also testing an array of underground muon detectors which are situated directly below its surface array stations.
 
