--- a/thesis_skel/thesis_DGL.tex
+++ b/thesis_skel/thesis_DGL.tex
@@ -19,15 +19,15 @@ The strategy and method to detect neutrino showers in this angular range with th
   \label{fig:Signal_trace_comp}
 \end{figure}
 
-To select the longer signals in the SD one of the variables that was used in erstwhile neutrino searches at Auger is the fraction of ToT-T2 triggered signals in the recorded event. As mentioned in the previous chapter this trigger is tuned to select broader signals, which for an inclined shower is evidence of a young shower. For the search presented in this thesis along with the ToT-T2, the ToTd and MoPS are also used. Both ToTd and MoPS as mentioned in sec.~\ref{sec:Sur_det_trig_new} help further increase the selection efficiency for broader signals by reducing the impact of low energy muons. These muons form the majority of the background at low zenith angles of the selected search range. Thus, these triggers are impactful in increasing the separation power for low energy ($\leq$ 1 EeV) neutrino showers. Another important variable that is used to judge the width of the signals is Area Over Peak (AoP). The AoP is defined as the ratio of the integrated signal of each PMT of the station over the biggest value or peak of the signal in that particular PMT averaged over all active PMTs in a station. The AoP is calibrated in such a way that narrow or old shower signals which are predominantly muons have AoP $\sim$1 while broad/old shower signals have AoP $\geqslant$ 1. 
+To select the longer signals in the SD one of the variables that was used in erstwhile neutrino searches at Auger is the fraction of ToT-T2 triggered signals in the recorded event. As mentioned in the previous chapter this trigger is tuned to select broader signals, which for an inclined shower is evidence of a young shower. For the search presented in this thesis along with the ToT-T2, the ToTd and MoPS are also used. Both ToTd and MoPS as mentioned in sec.~\ref{sec:Sur_det_trig_new} help further increase the selection efficiency for broader signals by reducing the impact of low energy muons. These muons form the majority of the background at low zenith angles of the selected search range. Thus, these triggers are impactful in increasing the separation power for low energy ($\leq$ 1 EeV) neutrino showers. Another important variable that is used to judge the width of the signals is \gls{AoP}. The AoP is defined as the ratio of the integrated signal of each PMT of the station over the biggest value or peak of the signal in that particular PMT averaged over all active PMTs in a station. The AoP is calibrated in such a way that narrow or old shower signals which are predominantly muons have AoP $\sim$1 while broad/old shower signals have AoP $\geqslant$ 1. 
 
 \section{Neutrino Simulations}
 \label{sec:sim_DGL}
-To characterize the neutrino search ability of the Pierre Auger Observatory Monte Carlo (MC) simulations of EASs induced by UHE$\nu$s are required. There are six possible neutrino interaction channels due to the three possible neutrino flavors with each having two possible channels (CC or NC). However, for simulations these are envisioned to be characterized by just two sets of simulations. For the NC channel since the EAS induced by three neutrino flavors has the exact same signature for our detector only $\nu_e$ NC simulations were performed for to estimate the NC contribution of all the three flavors to the final detection efficiency. 
+To characterize the neutrino search ability of the Pierre Auger Observatory \gls{MC}simulations of EASs induced by UHE$\nu$s are required. There are six possible neutrino interaction channels due to the three possible neutrino flavors with each having two possible channels (CC or NC). However, for simulations these are envisioned to be characterized by just two sets of simulations. For the NC channel since the EAS induced by three neutrino flavors has the exact same signature for our detector only $\nu_e$ NC simulations were performed for to estimate the NC contribution of all the three flavors to the final detection efficiency. 
 
 For the CC interactions, in the case of $\nu_{\mu}$ the resulting high energy muon has a high probability of evading detection. This signature very similar to the NC interaction where the resultant secondary neutrino also carries approximately 80\% of the primary energy and probably evades detection. Thus, after taking into account the appropriate cross-section, in principle, the NC simulations can be used to also estimate the contribution of $\nu_{\mu}$ CC channel to the detection efficiency.  
 
-In the case of $\nu_{\tau}$ CC interactions where the resulting $\tau$ especially at higher energies($\geq $EeV) can decay and also initiate a secondary shower resulting in a "double bang" like signature in the Observatory. In the context of this thesis, such signatures are not accounted for and the $\nu_{\tau}$ CC interaction is treated in the same way as the $\nu_{\mu}$ CC interaction resulting in a possible underestimation of the detection potential of the Observatory to $\nu_{\tau}$ events. A future $\nu_{\tau}$ simulation library is currently being prepared by the Pierre Auger Collaboration Monte Carlo task and could help improve this analysis in the future.
+In the case of $\nu_{\tau}$ CC interactions where the resulting $\tau$ especially at higher energies ($\geq $EeV) can decay and also initiate a secondary shower resulting in a "double bang" like signature in the Observatory. In the context of this thesis, such signatures are not accounted for and the $\nu_{\tau}$ CC interaction is treated in the same way as the $\nu_{\mu}$ CC interaction resulting in a possible underestimation of the detection potential of the Observatory to $\nu_{\tau}$ events. A future $\nu_{\tau}$ simulation library is currently being prepared by the Pierre Auger Collaboration Monte Carlo task and could help improve this analysis in the future.
 
 Thus, in summary, $\nu_e$ CC and NC simulations can be considered to be good approximations to estimate the contributions of all the other channels to the overall exposure of the Observatory. The simulations were produced in two parts by the Pierre Auger Collaboration Monte Carlo task based on the GAP note~\cite{gap_note_2013} and input from the author. The first part entails the simulation of the $\nu$ induced EAS in the atmosphere and the second consists of simulating the appropriate detector response for the corresponding shower. 
 
@@ -35,12 +35,12 @@ Thus, in summary, $\nu_e$ CC and NC simulations can be considered to be good app
 \label{subsec:sim_EAS}
 CORSIKA (COsmic Ray Simulations for KASCADE)~\cite{Heck:1998vt}, a simulation software for modelling extensive air showers in the Earth's atmosphere was used to generate the EAS initiated by a $\nu$ primary. The simulation parameters are defined through files known as input cards. An example of the input cards used to generate simulation for this analysis is provided in Appendix~\ref{sec:app_1}. The first step involved simulating the primary neutrino-nucleon interaction which is performed in CORSIKA using the HERWIG~\cite{Corcella:2000bw} code. Further, options such as CHARM to track charm secondaries are not used. Also since only $\nu_e$ simulations are simulated, the TAULEP option which handles $\nu_{\tau}$ and $\overline{\nu_{\tau}}$ is also not used. The systematic uncertainties related to the primary interaction estimator are discussed later in section~\ref{sec:det_uncert}. CORSIKA further tracks and simulates the interactions of the primary interaction products as they travel in the atmosphere toward the ground constituting the air shower. It offers a wide variety of choices regarding the hadronic interaction models it uses to simulate these interactions. For the simulations used in this study separate high and low energy hadronic interaction models were used. For energies higher than 200 GeV three high energy hadronic models QGSJETT-II.04~\cite{Ostapchenko:2010vb}, SYBILL 2.3d~\cite{Riehn:2019jet} and EPOS-LHC~\cite{Pierog:2013ria} were compared. The results of the comparison are mentioned in detail in Appendix~\ref{sec:app_2}. Since the differences between the models are not that significant for the neutrino analysis SYBILL 2.3d was chosen as the high energy interaction model. For lower energies FLUKA~\cite{Ferrari:2005zk,Battistoni:2015epi} was chosen. The systematic uncertainties arising from different models are discussed in section~\ref{sec:det_uncert}.  
 
-To account for the curvature of the Earth which is especially important for the zenith angles studied, the EGS4~\cite{Nelson:1990sr} Monte-Carlo method is chosen to simulate the electromagnetic component of the shower. The analytical NKG method based on eq.~\ref{eq:Lateral_dist_func} which is also available but is not used for these simulations since it vastly underestimates the maximum of the electromagnetic component due to the fact it does not account for a curved atmosphere. Global Data Assimilation System (GDAS) measurements at Malargüe~\cite{PierreAuger:2012jsu} were used for the atmospheric profile chosen for the simulations. The magnetic field components are taken to be the default values at the Malargüe site ($\mathrm{B_x = 19.52\,\mu T}$ and $\mathrm{B_z = -14.17 \,\mu T}$). 
+To account for the curvature of the Earth which is especially important for the zenith angles studied, the EGS4~\cite{Nelson:1990sr} Monte-Carlo method is chosen to simulate the electromagnetic component of the shower. The analytical NKG method based on eq.~\ref{eq:Lateral_dist_func} which is also available but is not used for these simulations since it vastly underestimates the maximum of the electromagnetic component due to the fact it does not account for a curved atmosphere. \GLS{GDAS} measurements at Malargüe~\cite{PierreAuger:2012jsu} were used for the atmospheric profile chosen for the simulations. The magnetic field components are taken to be the default values at the Malargüe site ($\mathrm{B_x = 19.52\,\mu T}$ and $\mathrm{B_z = -14.17 \,\mu T}$). 
 
 Further, since the computing times taken for shower simulations scale roughly with the primary energy, for primary energies >$10^{16}$eV these times become extremely long. Though parallel computing provides a viable solution, the technique of "thin sampling" or thinning~\cite{Hillas:1997tf} offers an alternate way to reduce the computation times while simultaneously avoiding the waste of resources. The thinning algorithm is applied to all particles below the adjustable fraction of the primary energy that emerge from an interaction. Only one of these particles is followed, and a proper weight is assigned to this particle to account for the untracked ones which are dropped based on the thinning level ($\mathrm{\epsilon_{th} = E/E_0}$). Additional information about the application and the improvements to this process can be found in~\cite{Heck:1998gr,Kobal:2001jx}. A thinning value of $10^{-6}$ is used for the simulations in this study.
 
 
-The simulations were performed using the GRID technology~\cite{GRID_tech,LozanoBahilo:2012pe}. Both CC and NC showers were simulated for fixed primary energy steps of log(E/eV) = 0.5 in the range $10^{16.5}-10^{20.0}$eV. The number of simulated showers was varied depending on the Energy (E), atmospheric depth of interaction (X) and the injected zenith angle ($\theta_{MC}$). More showers were simulated at lower energies and the energy dependent numbers are tabulated in table~\ref{tab:Simulation_params}. Further, for both the interaction channels within the zenith angle range $60^{\circ}-70^{\circ}$ the neutrinos were forced to interact at fixed atmospheric depths in steps of 100 g cm$^{-2}$. The injection points both close to the ground where a neutrino shower might have a lower trigger efficiency and close to the top of the atmosphere where a neutrino induced shower might mimic one induced by a proton are rejected for the simulations. The azimuthal angle is left free and can take any value between 0$^{\circ}$ and 360$^{\circ}$. The simulated depths for each zenith angle bin are also summarized in table~\ref{tab:Simulation_params}. The values for the simulations are almost the same as used in the previous analysis~\cite{gap_note_2013} with the only change being the range for the primary energy which was simulated.
+The simulations were performed using the GRID technology~\cite{GRID_tech,LozanoBahilo:2012pe}. Both CC and NC showers were simulated for fixed primary energy steps of log(E/eV) = 0.5 in the range $10^{16.5}-10^{20.0}$eV. The number of simulated showers was varied depending on the Energy (E), atmospheric depth of interaction or injected slant depth (X) and the injected zenith angle ($\theta_{MC}$). More showers were simulated at lower energies and the energy dependent numbers are tabulated in table~\ref{tab:Simulation_params}. Further, for both the interaction channels within the zenith angle range $60^{\circ}-70^{\circ}$ the neutrinos were forced to interact at fixed atmospheric depths in steps of 100 g cm$^{-2}$. The injection points both close to the ground where a neutrino shower might have a lower trigger efficiency and close to the top of the atmosphere where a neutrino induced shower might mimic one induced by a proton are rejected for the simulations. The azimuthal angle is left free and can take any value between 0$^{\circ}$ and 360$^{\circ}$. The simulated depths for each zenith angle bin are also summarized in table~\ref{tab:Simulation_params}. The values for the simulations are almost the same as used in the previous analysis~\cite{gap_note_2013} with the only change being the range for the primary energy which was simulated.
 
 \begin{figure}[t!]
   \centering
@@ -384,7 +384,7 @@ The pre-selection cuts are applied based on the unique properties of "young" neu
 
 \subsection{Fisher linear discriminant analysis}
 \label{subsec:nu_sel_fisher}
-The last step for the $\nu$ selection and identification involves Fisher Discriminant Analysis (FDA) also known as Linear Discriminant Analysis(LDA). This is a statistical method used to find a linear combination of features i.e. Fisher polynomial that characterizes and separates the two classes, in our case, signal and background training distributions. The goal of FDA is to find a projection that maximizes the distance between the projected class means while minimizing the variance within each class. This ensures that the classes are well-separated in the reduced space. Mathematically, if we have a signal class represented by $X_s$ with mean $\mu_s$ and a background class $X_b$ with mean $\mu_b$ then the optimal discriminating hyperplane represented by $w$ can be found by solving the equation $S_B w = \lambda S_W w$. The solution is the eigenvector corresponding to the largest eigenvalue $\lambda$. $S_B$ is called the between-class matrix and represented as follows: 
+The last step for the $\nu$ selection and identification involves \gls{FDA} also known as \gls{LDA}. This is a statistical method used to find a linear combination of features i.e. Fisher polynomial that characterizes and separates the two classes, in our case, signal and background training distributions. The goal of FDA is to find a projection that maximizes the distance between the projected class means while minimizing the variance within each class. This ensures that the classes are well-separated in the reduced space. Mathematically, if we have a signal class represented by $X_s$ with mean $\mu_s$ and a background class $X_b$ with mean $\mu_b$ then the optimal discriminating hyperplane represented by $w$ can be found by solving the equation $S_B w = \lambda S_W w$. The solution is the eigenvector corresponding to the largest eigenvalue $\lambda$. $S_B$ is called the between-class matrix and represented as follows: 
 
 \begin{equation}
   S_B = \sum_{i = X_s,X_b} n_i (\mu_i - \mu)(\mu_i - \mu)^T
@@ -692,7 +692,7 @@ In this section, the detection efficiency at each stage of the $\nu$ selection p
     Neutrino Selection & $\mathcal{F}_{\mathrm{cut}}$ & 69.1\% & 37.1\%\\
     \hline
   \end{tabular}
-  \caption{The table shows the selection efficiencies for the MC sample across different cuts in the $\nu$ analysis. Efficiencies are computed relative to the events remaining after each preceding cut, except for the inclined selection, where they are calculated against the total number of reconstructed events. The results include efficiencies for both charged-current (CC) and neutral-current (NC) interaction channels.}
+  \caption{The table shows the selection efficiencies for the MC sample across different cuts in the $\nu$ analysis. Efficiencies are computed relative to the events remaining after each preceding cut, except for the inclined selection, where they are calculated against the total number of reconstructed events. The results include efficiencies for both \gls{CC} and \gls{NC} interaction channels.}
   \label{tab:Selection_eff}
 \end{table}
 
@@ -744,10 +744,10 @@ In this section, the detection efficiency at each stage of the $\nu$ selection p
 
 The inclined shower selection removes $\sim 10\%$ of showers. These showers were previously discussed in section~\ref{sec:reco_possel}. Most of these events are showers which interact very close to the ground which can lead to a mis-reconstructed zenith angle. Further, calculating the impact of $\Delta \theta_{\text{rec}}$ both CC and NC events observe a strong reduction. Comparing to the analysis with old triggers this decrease is $\sim$10\% higher for CC but similar for the one observed for NC interactions. 
  
-The errors associated with neutral-current (NC) events tend to worsen with increasing zenith angle and decreasing shower energy which was also shown earlier in the previous analysis. These conditions hinder the performance of the reconstruction algorithm, as both scenarios result in a limited number of triggered stations. Additionally, in the case of lower energies, certain geometric patterns, such as linear alignments, can adversely affect zenith angle determination.
+The errors associated with \gls{NC} events tend to worsen with increasing zenith angle and decreasing shower energy which was also shown earlier in the previous analysis. These conditions hinder the performance of the reconstruction algorithm, as both scenarios result in a limited number of triggered stations. Additionally, in the case of lower energies, certain geometric patterns, such as linear alignments, can adversely affect zenith angle determination.
 
 The error distributions for the CC channel is shown in fig~\ref{fig:Theta_err_comp}.
-For charged-current (CC) events, the significant decline in reconstruction performance with the inclusion of new triggers is primarily due to a deterioration in angular reconstruction. This issue may stem from several factors, such as the absence of a tuned segment selection algorithm for the new triggers or the susceptibility of these triggers to noise. It was also seen that neutrino events with a lower primary energy, where new triggers perform the best, have a higher absolute error on zenith angle further cementing this fact. Future improvements to the angular reconstruction algorithm, which were beyond the scope of this thesis, are proposed in the Outlook section to address these challenges and enhance performance.
+For \gls{CC} events, the significant decline in reconstruction performance with the inclusion of new triggers is primarily due to a deterioration in angular reconstruction. This issue may stem from several factors, such as the absence of a tuned segment selection algorithm for the new triggers or the susceptibility of these triggers to noise. It was also seen that neutrino events with a lower primary energy, where new triggers perform the best, have a higher absolute error on zenith angle further cementing this fact. Future improvements to the angular reconstruction algorithm, which were beyond the scope of this thesis, are proposed in the Outlook section to address these challenges and enhance performance.
 
 \begin{figure}[h!]
   \centering
@@ -763,12 +763,12 @@ The fiducial quality cut is inherently integrated into the reconstruction algori
 The T5 candidate cut has a more pronounced effect on the NC channel than on the CC channel. This difference arises because the NC channel typically involves fewer triggered stations compared to the CC channel.
 
 
-Additionally, the Fisher discrimination efficiency varies between the channels, performing better for the CC channel than for the NC channel as seen in table~\ref{tab:Selection_eff}. This discrepancy is further investigated through the Area-over-Peak (AoP) distributions for the two channels (see Fig.~\ref{fig:AoP_v_X}). On average, CC events exhibit higher AoP values compared to NC events. Notably, the AoP values for NC events tend to fall between those of CC and background events, resulting in less effective separation for the NC channel. Overall, NC channel events retain a lower electromagnetic component when reaching the ground compared to CC events, a feature already highlighted in previous analyses.
+Additionally, the Fisher discrimination efficiency varies between the channels, performing better for the CC channel than for the NC channel as seen in table~\ref{tab:Selection_eff}. This discrepancy is further investigated through the \gls{AoP} distributions for the two channels (see Fig.~\ref{fig:AoP_v_X}). On average, CC events exhibit higher AoP values compared to NC events. Notably, the AoP values for NC events tend to fall between those of CC and background events, resulting in less effective separation for the NC channel. Overall, NC channel events retain a lower electromagnetic component when reaching the ground compared to CC events, a feature already highlighted in previous analyses.
 
 \begin{figure}[t!]
   \centering
   \includegraphics[width=0.85\textwidth]{thesis_figures/Nu_analysis/Nu_eff/Selection_Evo_AoP_X_MC_wnt_redcut.pdf}
-  \caption{Average Area over Peak (AoP) of the T5 stations used in the Fisher analysis for the signal training sample as a function of the injected slant depth. The AoP values for the $\nu_e$ CC channels are also subdivided into two angular regions for comparison. The AoP value range for the background training sample is shown as the purple box.}
+  \caption{Average Area over Peak of the T5 stations used in the Fisher analysis for the signal training sample as a function of the injected slant depth. The AoP values for the $\nu_e$ CC channels are also subdivided into two angular regions for comparison. The AoP value range for the background training sample is shown as the purple box.}
   \label{fig:AoP_v_X}
 \end{figure}
 
